RESOLVED FIXED119415
[Windows] WebKit1 Full Screen Video Play on Windows is Broken
https://bugs.webkit.org/show_bug.cgi?id=119415
Summary [Windows] WebKit1 Full Screen Video Play on Windows is Broken
Brent Fulgham
Reported 2013-08-01 15:43:40 PDT
Switching to "Full Screen" mode while playing a video in WinLauncher does not work. Video renders as a blank, red, screen. Moving back to normal move leaves the player screen blank (though captions and audio still play).
Attachments
Patch (15.26 KB, patch)
2013-08-01 16:02 PDT, Brent Fulgham
jer.noble: review+
Brent Fulgham
Comment 1 2013-08-01 15:45:18 PDT
Brent Fulgham
Comment 2 2013-08-01 16:02:17 PDT
Jer Noble
Comment 3 2013-08-01 16:45:49 PDT
Comment on attachment 207967 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207967&action=review > Source/WebCore/platform/graphics/ca/win/WKCACFViewLayerTreeHost.h:42 > + virtual bool manualCreateRenderer() { return createRenderer(); } > + We should just make createRenderer() public rather than make a public alias. > Source/WebCore/platform/graphics/win/MediaPlayerPrivateFullscreenWindow.cpp:82 > - ::CreateWindowExW(WS_EX_TOOLWINDOW, windowClassName, L"", WS_POPUP, > + m_hwnd = ::CreateWindowExW(WS_EX_TOOLWINDOW, windowClassName, L"", WS_POPUP, This isn't necessary as m_hwnd will be set in a WM_CREATE message during this call. (That's what the ASSERT below is checking.) Other than those nits, LGTM.
Brent Fulgham
Comment 4 2013-08-01 17:05:56 PDT
Note You need to log in before you can comment on or make changes to this bug.